--- a/package.json
+++ b/package.json
@@ -5,9 +5,34 @@
   "keywords": [
     "editor",
     "react",
+    "medium",
     "react-component"
   ],
   "license": "MIT",
   "author": "Fantasy Shao <fantasyshao@icloud.com>",
-  "dependencies": {}
+  "repository": "git@github.com:SFantasy/react-inline-editor",
+  "main": "./src/Editor.js",
+  "scripts": {
+
+  },
+  "dependencies": {
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.2",
+    "react-hot-loader": "^1.2.8",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
+  }
 }
